# householder_method_for_reducing_a_symmetric_matrix_to_a_tridiagonal_form

./: .gitignore  README.md  vtm_prac
3.10.23/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matmul_result.txt
main_project/: CMakeLists.txt  tests_results.txt
main_project/src/: CMakeLists.txt  householder_for_sym_matrix.cpp  householder_for_sym_matrix.h  main.cpp
main_project/test/: CMakeLists.txt  main.cpp
